# Odoo_migration_auditor_v1

./: .gitignore  readme.md  test_agent.py
backend/: db.sqlite3  manage.py  readme.md  requirements.txt
backend/auditor_backend/: asgi.py  project_context.txt  settings.py  urls.py  wsgi.py
backend/projects/: admin.py  models.py  permissions.py  project_context.txt  scoring.py  serializers.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_initial.py  0003_issue.py  0004_analysisrun_completed_at_alter_analysisrun_status.py  0005_project_git_url.py  0006_analysisrun_effort_score.py  0007_issue_issue_code.py  0008_alter_issue_issue_code.py
backend/users/: admin.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
cli-agent/: .env  main.py  pyproject.toml  report.json  requirements.txt
cli-agent/auditor/: api_client.py  discovery.py  main.py  report.py  run.py
cli-agent/auditor/checkers/: base_checker.py  python_checkers.py  xml_checkers.py
fake_odoo_project/my_cool_module/: .odoo-auditor.yml  __manifest__.py
fake_odoo_project/my_cool_module/models/: sale_order.py
fake_odoo_project/my_cool_module/views/: sale_views.xml
